bringing my branch up-to-date with kernel trunk
git-svn-id: https://source.sakaiproject.org/svn/kernel@66489 66ffb92e-73f9-0310-93c1-f5514f145a0a