@@ -71,12 +71,13 @@ public class RequestFilter implements Filter
 	/** Our log (commons). */
 	private static Log M_log = LogFactory.getLog(RequestFilter.class);
 
-	/** The name of the cookie we use to keep sakai session. */
-	public static final String SESSION_COOKIE = "JSESSIONID";
-
 	/** The request attribute name used to store the Sakai session. */
 	public static final String ATTR_SESSION = "sakai.session";
 
+	/** The request attribute name used to ask the RequestFilter to output
+	 * a client cookie at the end of the request cycle. */
+	public static final String ATTR_SET_COOKIE = "sakai.set.cookie";
+	
 	/** The request attribute name (and value) used to indicated that the request has been filtered. */
 	public static final String ATTR_FILTERED = "sakai.filtered";
 
@@ -94,6 +95,9 @@ public class RequestFilter implements Filter
 
 	/** Config parameter to control http session handling. */
 	public static final String CONFIG_SESSION = "http.session";
+
+	/** Config parameter to control whether to check the request principal before any cookie to establish a session */
+	public static final String CONFIG_SESSION_AUTH = "sakai.session.auth";
 
 	/** Config parameter to control remote user handling. */
 	public static final String CONFIG_REMOTE_USER = "remote.user";
@@ -201,6 +205,12 @@ public class RequestFilter implements Filter
 	/** The name of the system property that will be used when setting the value of the session cookie. */
 	protected static final String SAKAI_SERVERID = "sakai.serverId";
 
+	/** The name of the system property that will be used when setting the name of the session cookie. */
+	protected static final String SAKAI_COOKIE_NAME = "sakai.cookieName";
+
+	/** The name of the system property that will be used when setting the domain of the session cookie. */
+	protected static final String SAKAI_COOKIE_DOMAIN = "sakai.cookieDomain";
+
 	/** If true, we deliver the Sakai wide session as the Http session for each request. */
 	protected int m_sakaiHttpSession = TOOL_SESSION;
 
@@ -219,6 +229,8 @@ public class RequestFilter implements Filter
 
 	protected boolean m_uploadEnabled = true;
 
+	protected boolean m_checkPrincipal = false; 
+	
 	protected long m_uploadMaxSize = 1L * 1024L * 1024L;
 
 	protected long m_uploadCeiling = 1L * 1024L * 1024L;
@@ -241,6 +253,13 @@ public class RequestFilter implements Filter
 	/** Is this a Terracotta clustered environment? */
 	protected boolean TERRACOTTA_CLUSTER = false;
 
+                                                                                                             
+    /** The name of the cookie we use to keep sakai session. */                                            
+    protected String cookieName = "JSESSIONID";                                                            
+                                                                                                              
+    protected String cookieDomain = null; 
+	
+	
 	/**
 	 * Wraps a request object so we can override some standard behavior.
 	 */
@@ -521,7 +540,7 @@ public class RequestFilter implements Filter
 		try
 		{
 			ThreadLocalManager.set(CURRENT_REMOTE_USER, Boolean.valueOf(m_sakaiRemoteUser));
-			ThreadLocalManager.set(CURRENT_HTTP_SESSION, new Integer(m_sakaiHttpSession));
+			ThreadLocalManager.set(CURRENT_HTTP_SESSION, Integer.valueOf(m_sakaiHttpSession));
 			ThreadLocalManager.set(CURRENT_CONTEXT, m_contextId);
 
 			// make the servlet context available
@@ -608,13 +627,51 @@ public class RequestFilter implements Filter
 						ThreadLocalManager.set(ServerConfigurationService.CURRENT_PORTAL_PATH, "/" + m_contextId);
 					}
 
-					synchronized(s) {
+					// Only synchronize on session for Terracotta. See KNL-218, KNL-75.
+					if (TERRACOTTA_CLUSTER) {
+						synchronized(s) {
+							// Pass control on to the next filter or the servlet
+							chain.doFilter(req, resp);
+	
+							// post-process response
+							postProcessResponse(s, req, resp);
+						}
+					} else {
 						// Pass control on to the next filter or the servlet
 						chain.doFilter(req, resp);
 
 						// post-process response
-						postProcessResponse(s, req, resp);
+						postProcessResponse(s, req, resp);						
 					}
+			
+					// Output client cookie if requested to do so
+					if (s != null && req.getAttribute(ATTR_SET_COOKIE) != null) {
+						
+						// check for existing cookie
+						String suffix = getCookieSuffix();
+						Cookie c = findCookie(req, cookieName, suffix);
+
+						// the cookie value we need to use
+						String sessionId = s.getId() + DOT + suffix;
+
+						// set the cookie if necessary
+						if ((c == null) || (!c.getValue().equals(sessionId))) {
+							c = new Cookie(cookieName, sessionId);
+							c.setPath("/");
+							c.setMaxAge(-1);
+							if (cookieDomain != null)
+							{
+								c.setDomain(cookieDomain);
+							}
+							if (req.isSecure() == true)
+							{
+								c.setSecure(true);
+							}
+							resp.addCookie(c);
+						}
+					}
+
+					
 				}
 				catch (RuntimeException t)
 				{
@@ -638,6 +695,7 @@ public class RequestFilter implements Filter
 					cleared = true;
 				}
 			}
+			
 		}
 		finally
 		{
@@ -659,6 +717,18 @@ public class RequestFilter implements Filter
 				long elapsedTime = System.currentTimeMillis() - startTime;
 				M_log.debug("request timing (ms): " + elapsedTime + " for " + sb);
 			}
+		}
+		
+		// retrieve the configured cookie name, if any
+		if (System.getProperty(SAKAI_COOKIE_NAME) != null)
+		{
+			cookieName = System.getProperty(SAKAI_COOKIE_NAME);
+		}
+
+		// retrieve the configured cookie domain, if any
+		if (System.getProperty(SAKAI_COOKIE_NAME) != null)
+		{
+			cookieDomain = System.getProperty(SAKAI_COOKIE_DOMAIN);
 		}
 	}
 
@@ -715,6 +785,11 @@ public class RequestFilter implements Filter
 		if (filterConfig.getInitParameter(CONFIG_REMOTE_USER) != null)
 		{
 			m_sakaiRemoteUser = Boolean.valueOf(filterConfig.getInitParameter(CONFIG_REMOTE_USER)).booleanValue();
+		}
+
+		if (filterConfig.getInitParameter(CONFIG_SESSION_AUTH) != null)
+		{
+			m_checkPrincipal= "basic".equals(filterConfig.getInitParameter(CONFIG_SESSION_AUTH));
 		}
 
 		if (filterConfig.getInitParameter(CONFIG_TOOL_PLACEMENT) != null)
@@ -807,6 +882,7 @@ public class RequestFilter implements Filter
 		
 		String clusterTerracotta = System.getProperty("sakai.cluster.terracotta");
 		TERRACOTTA_CLUSTER = "true".equals(clusterTerracotta);
+		
 	}
 
 	/**
@@ -964,7 +1040,7 @@ public class RequestFilter implements Filter
 						// TODO: for 1.2 commons-fileupload, switch this to a FileSizeLimitExceededException
 						req.setAttribute("upload.exception", new FileUploadBase.SizeLimitExceededException("", item.getSize(),
 								uploadMax));
-						req.setAttribute("upload.limit", new Long((uploadMax / 1024L) / 1024L));
+						req.setAttribute("upload.limit", Long.valueOf((uploadMax / 1024L) / 1024L));
 					}
 					else
 					{
@@ -987,7 +1063,7 @@ public class RequestFilter implements Filter
 			// so that the tool down-the-line can handle the problem
 			req.setAttribute("upload.status", "size_limit_exceeded");
 			req.setAttribute("upload.exception", ex);
-			req.setAttribute("upload.limit", new Long((upload.getSizeMax() / 1024L) / 1024L));
+			req.setAttribute("upload.limit", Long.valueOf((upload.getSizeMax() / 1024L) / 1024L));
 		}
 		// TODO: put in for commons-fileupload 1.2
 		// catch (FileUploadBase.FileSizeLimitExceededException ex)
@@ -1032,77 +1108,71 @@ public class RequestFilter implements Filter
 	{
 		Session s = null;
 		String sessionId = null;
-
-		// compute the session cookie suffix, based on this configured server id
-		String suffix = System.getProperty(SAKAI_SERVERID);
-		if ((suffix == null) || (suffix.length() == 0))
-		{
-			if (m_displayModJkWarning)
-			{
-				M_log.info("no sakai.serverId system property set - mod_jk load balancing will not function properly");
-
-				// only display warning once
-				// FYI this is not thread safe, but the side effects are negligible and not worth the overhead of synchronizing
-				// -lance
-				m_displayModJkWarning = false;
-			}
-
-			suffix = "sakai";
-		}
-
+		boolean allowSetCookieEarly = true;
+		Cookie c = null;
+		
 		// automatic, i.e. not from user activite, request?
 		boolean auto = req.getParameter(PARAM_AUTO) != null;
 
-		sessionId = req.getParameter(ATTR_SESSION);
+		String suffix = getCookieSuffix();
 
-		// find our session id from our cookie
-		Cookie c = findCookie(req, SESSION_COOKIE, suffix);
+		// try finding a non-cookie session based on the remote user / principal
+		// Note: use principal instead of remote user to avoid any possible confusion with the remote user set by single-signon
+		// auth.
+		// Principal is set by our Dav interface, which this is designed to cover. -ggolden
+		
+		Principal principal = req.getUserPrincipal();
 
-		if (sessionId == null && c != null)
+		if (m_checkPrincipal && (principal != null) && (principal.getName() != null))
 		{
-			// get our session id
-			sessionId = c.getValue();
-		}
+			// set our session id to the remote user id
+			sessionId = SessionManager.makeSessionId(req, principal);
 
-		if (sessionId != null)
-		{
-			// remove the server id suffix
-			final int dotPosition = sessionId.indexOf(DOT);
-			if (dotPosition > -1)
-			{
-				sessionId = sessionId.substring(0, dotPosition);
-			}
-			if (M_log.isDebugEnabled())
-			{
-				M_log.debug("assureSession found sessionId in cookie: " + sessionId);
-			}
-
+			// don't supply this cookie to the client
+			allowSetCookieEarly = false;
+			
 			// find the session
 			s = SessionManager.getSession(sessionId);
+
+			// if not found, make a session for this user
+			if (s == null)
+			{
+				s = SessionManager.startSession(sessionId);
+			}
+			
+			// Make these sessions expire after 10 minutes
+			s.setMaxInactiveInterval(10*60);
 		}
 
-		// if no cookie, try finding a non-cookie session based on the remote user / principal
-		else
+		// if no principal, check request parameter and cookie
+		if (sessionId == null || s == null)
 		{
-			// Note: use principal instead of remote user to avoid any possible confusion with the remote user set by single-signon
-			// auth.
-			// Principal is set by our Dav interface, which this is desined to cover. -ggolden
-			// String remoteUser = req.getRemoteUser();
-			Principal principal = req.getUserPrincipal();
+			sessionId = req.getParameter(ATTR_SESSION);
 
-			if ((principal != null) && (principal.getName() != null))
+			// find our session id from our cookie
+			c = findCookie(req, cookieName, suffix);
+
+			if (sessionId == null && c != null)
 			{
-				// set our session id to the remote user id
-				sessionId = principal.getName();
+				// get our session id
+				sessionId = c.getValue();
+			}
+
+			if (sessionId != null)
+			{
+				// remove the server id suffix
+				final int dotPosition = sessionId.indexOf(DOT);
+				if (dotPosition > -1)
+				{
+					sessionId = sessionId.substring(0, dotPosition);
+				}
+				if (M_log.isDebugEnabled())
+				{
+					M_log.debug("assureSession found sessionId in cookie: " + sessionId);
+				}
 
 				// find the session
 				s = SessionManager.getSession(sessionId);
-
-				// if not found, make a session for this user
-				if (s == null)
-				{
-					s = SessionManager.startSession(sessionId);
-				}
 			}
 		}
 
@@ -1156,15 +1226,19 @@ public class RequestFilter implements Filter
 		if ((s == null) && (c != null))
 		{
 			// remove the cookie
-			c = new Cookie(SESSION_COOKIE, "");
+			c = new Cookie(cookieName, "");
 			c.setPath("/");
 			c.setMaxAge(0);
+			if (cookieDomain != null)
+			{
+				c.setDomain(cookieDomain);
+			}
 			res.addCookie(c);
 		}
 
 		// if we have a session and had no cookie,
 		// or the cookie was to another session id, set the cookie
-		if (s != null)
+		if ((s != null) && allowSetCookieEarly)
 		{
 			// the cookie value we need to use
 			sessionId = s.getId() + DOT + suffix;
@@ -1172,9 +1246,13 @@ public class RequestFilter implements Filter
 			if ((c == null) || (!c.getValue().equals(sessionId)))
 			{
 				// set the cookie
-				c = new Cookie(SESSION_COOKIE, sessionId);
+				c = new Cookie(cookieName, sessionId);
 				c.setPath("/");
 				c.setMaxAge(-1);
+				if (cookieDomain != null)
+				{
+					c.setDomain(cookieDomain);
+				}
 				if (req.isSecure() == true)
 				{
 					c.setSecure(true);
@@ -1345,4 +1423,26 @@ public class RequestFilter implements Filter
 
 		return url.toString();
 	}
+	
+	/**
+	 * Get cookie suffix from the serverId.
+	 * We can't do this at init time as it might not have been set yet (sakai hasn't started).
+	 * @return The cookie suffix to use.
+	 */
+	private String getCookieSuffix()
+	{
+		// compute the session cookie suffix, based on this configured server id
+		String suffix = System.getProperty(SAKAI_SERVERID);
+		if ((suffix == null) || (suffix.length() == 0))
+		{
+			if (m_displayModJkWarning)
+			{
+				M_log.warn("no sakai.serverId system property set - mod_jk load balancing will not function properly");
+			}
+			m_displayModJkWarning = false;
+			suffix = "sakai";
+		}
+		return suffix;
+	}
+
 }
