@@ -378,8 +378,6 @@ public class BaseDbDualSingleStorage  implements DbSingleStorage
 
 	public int countAllResources()
 	{
-		List all = new Vector();
-
 		// read all count
 		String sql = singleStorageSql.getNumRowsSql(m_resourceTableName);
 
@@ -390,7 +388,7 @@ public class BaseDbDualSingleStorage  implements DbSingleStorage
 				try
 				{
 					int count = result.getInt(1);
-					return new Integer(count);
+					return Integer.valueOf(count);
 				}
 				catch (SQLException ignore)
 				{
@@ -406,8 +404,6 @@ public class BaseDbDualSingleStorage  implements DbSingleStorage
 
 	public int countSelectedResourcesWhere(String sqlWhere)
 	{
-		List all = new Vector();
-
 		// read all where count
 		String sql = singleStorageSql.getNumRowsSql(m_resourceTableName, sqlWhere);
 		List results = m_sql.dbRead(sql, null, new SqlReader()
@@ -417,7 +413,7 @@ public class BaseDbDualSingleStorage  implements DbSingleStorage
 				try
 				{
 					int count = result.getInt(1);
-					return new Integer(count);
+					return Integer.valueOf(count);
 				}
 				catch (SQLException ignore)
 				{
